<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/city"
        style="@style/TextHomeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/label_city"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/date"
        style="@style/TextHomeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/city"
        android:paddingLeft="10dp"
        android:text="@string/label_date" />

    <TextView
        android:id="@+id/temperature"
        style="@style/TextHomeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/label_temperature"
        android:textSize="24sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/date"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="22dp"
        android:background="@color/translucent_blue" >

        <TextView
            style="@style/TextHomeActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/label_wind" />

        <TextView
            android:id="@+id/wind"
            style="@style/TextHomeActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:text="@string/label_wind_value" />

        <TextView
            style="@style/TextHomeActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/label_humidity" />

        <TextView
            android:id="@+id/humidity"
            style="@style/TextHomeActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/label_humidity_value" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/image_weather_description"
            android:layout_centerVertical="true" />
        
    </RelativeLayout>

   <TextView
        android:id="@+id/description"
        style="@style/TextHomeActivity"
        android:shadowColor="#000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="30dp"
        android:text="" />
    
    <TextView
        android:id="@+id/time"
        style="@style/TextHomeActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/changecity"
        android:layout_alignParentLeft="true"
        android:alpha="1"
        android:background="@color/translucent_blue"
        android:gravity="center"
        android:paddingBottom="40dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#FFF"
        android:textSize="45sp" />
    
    <Button
        android:id="@+id/changecity"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:onClick="askToChangeCity"
        android:text="@string/btn_changecity" />

</RelativeLayout>